Deleted failing test, it was no longer relevant, tested Delegate Security Manager functionality, which is now disabled.
Reduced the number of Integer, Long, Float, Char etc objects created, by using valueOf instead of new.

Fixed minor bugs found with FindBugs - some string concatenations in loops outstanding

git-svn-id: https://svn.apache.org/repos/asf/river/jtsk/trunk@1302114 13f79535-47bb-0310-9956-ffa450edef68