@@ -427,7 +427,7 @@ class ServiceEditor extends JFrame {
 	  ServiceMatches matches = registrar.lookup(stmpl, 1);
 	  if(matches.totalMatches != 1)
 	    Browser.logger.log(Level.INFO, "unexpected lookup matches: {0}",
-			       new Integer(matches.totalMatches));
+			       Integer.valueOf(matches.totalMatches));
 	  else
 	    item.attributeSets = matches.items[0].attributeSets;
 	} catch (Throwable t) {
