@@ -277,7 +277,7 @@ class Activation implements Serializable {
 	throws ConfigurationException
     {
 	return ((Integer) config.getEntry(PHOENIX, name, int.class,
-					  new Integer(defValue))).intValue();
+					  Integer.valueOf(defValue))).intValue();
     }
 
     /**
