@@ -472,7 +472,7 @@ public final class ActivatableInvocationHandler
 	String name = method.getName();
 
 	if (name.equals("hashCode")) {
-	    return new Integer(hashCode());
+	    return Integer.valueOf(hashCode());
 
 	} else if (name.equals("equals")) {
 	    Object obj = args[0];
